--- a/retoure-enterprise/pom.xml
+++ b/retoure-enterprise/pom.xml
@@ -3,46 +3,22 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <!--
-        POM
-    -->
     <parent>
         <artifactId>retoure-server</artifactId>
         <groupId>eu.artofcoding.retoure</groupId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>LOCALBUILD</version>
     </parent>
     <artifactId>retoure-enterprise</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
-    <!--
-        Project Information
-    -->
     <name>Retoure Enterprise</name>
     <url>http://www.retourenportal.com</url>
-    <!--
-        Build Settings
-    -->
     <packaging>ear</packaging>
-    <!-- Properties -->
-    <properties>
-    </properties>
     <dependencies>
-        <!--
-            Retoure
-        -->
+        <!-- Retoure -->
         <dependency>
             <groupId>eu.artofcoding.retoure</groupId>
             <artifactId>retoure-persistence</artifactId>
-            <version>${project.version}</version>
             <type>ejb</type>
         </dependency>
-        <!--
-        <dependency>
-            <groupId>eu.artofcoding.retoure</groupId>
-            <artifactId>retoure-web</artifactId>
-            <version>${project.version}</version>
-            <type>war</type>
-        </dependency>
-        -->
     </dependencies>
     <build>
         <plugins>
