--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>eu.artofcoding.retoure</groupId>
     <artifactId>retoure-server</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>LOCALBUILD</version>
     <name>Retoure Server</name>
     <url>http://www.retourenportal.com</url>
     <packaging>pom</packaging>
@@ -22,17 +22,18 @@
         <module>retoure-enterprise</module>
     </modules>
     <properties>
-        <aoc.basedir>${user.home}/project</aoc.basedir>
-        <aoc.public.maven.repository>file:${aoc.basedir}/public.maven.repository/</aoc.public.maven.repository>
-        <aoc.private.maven.repository>file:${aoc.basedir}/private.maven.repository/</aoc.private.maven.repository>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <version.java>1.7</version.java>
-        <version.eu.artofcoding.beetlejuice>1.3.0-SNAPSHOT</version.eu.artofcoding.beetlejuice>
+        <version.java>1.8</version.java>
+        <version.eu.artofcoding.beetlejuice>1.3.0.49</version.eu.artofcoding.beetlejuice>
+        <version.org.apache.cxf>2.7.10</version.org.apache.cxf>
     </properties>
     <profiles>
         <!-- arquillian-junit -->
         <profile>
             <id>arquillian-junit</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
             <dependencies>
                 <!-- JUnit -->
                 <dependency>
@@ -173,6 +174,9 @@
         <!-- arquillian-drone-selenium -->
         <profile>
             <id>arquillian-drone-selenium</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
             <dependencies>
                 <!-- Arquillian Drone -->
                 <dependency>
@@ -218,34 +222,111 @@
     <dependencyManagement>
         <dependencies>
             <!--
-                CDI
+                Retoure
             -->
-            <!-- CDI API -->
+            <dependency>
+                <groupId>eu.artofcoding.retoure</groupId>
+                <artifactId>retoure-api</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>eu.artofcoding.retoure</groupId>
+                <artifactId>retoure-persistence</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>eu.artofcoding.retoure</groupId>
+                <artifactId>retoure-persistence</artifactId>
+                <version>${project.version}</version>
+                <type>ejb</type>
+            </dependency>
+            <dependency>
+                <groupId>eu.artofcoding.retoure</groupId>
+                <artifactId>retoure-dhl-client</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>eu.artofcoding.retoure</groupId>
+                <artifactId>retoure-web-helper</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>eu.artofcoding.retoure</groupId>
+                <artifactId>retoure-store-demo</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>eu.artofcoding.retoure</groupId>
+                <artifactId>retoure-store-aktivshop</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>eu.artofcoding.retoure</groupId>
+                <artifactId>retoure-web-demo</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <!--
+                Beetlejuice
+            -->
+            <dependency>
+                <groupId>eu.artofcoding.beetlejuice</groupId>
+                <artifactId>eu.artofcoding.beetlejuice.api</artifactId>
+                <version>${version.eu.artofcoding.beetlejuice}</version>
+            </dependency>
+            <dependency>
+                <groupId>eu.artofcoding.beetlejuice</groupId>
+                <artifactId>eu.artofcoding.beetlejuice.persistence</artifactId>
+                <version>${version.eu.artofcoding.beetlejuice}</version>
+            </dependency>
+            <dependency>
+                <groupId>eu.artofcoding.beetlejuice</groupId>
+                <artifactId>eu.artofcoding.beetlejuice.cdm</artifactId>
+                <version>${version.eu.artofcoding.beetlejuice}</version>
+            </dependency>
+            <dependency>
+                <groupId>eu.artofcoding.beetlejuice</groupId>
+                <artifactId>eu.artofcoding.beetlejuice.template</artifactId>
+                <version>${version.eu.artofcoding.beetlejuice}</version>
+            </dependency>
+            <dependency>
+                <groupId>eu.artofcoding.beetlejuice</groupId>
+                <artifactId>eu.artofcoding.beetlejuice.email</artifactId>
+                <version>${version.eu.artofcoding.beetlejuice}</version>
+            </dependency>
+            <dependency>
+                <groupId>eu.artofcoding.beetlejuice</groupId>
+                <artifactId>eu.artofcoding.beetlejuice.web</artifactId>
+                <version>${version.eu.artofcoding.beetlejuice}</version>
+            </dependency>
+            <dependency>
+                <groupId>eu.artofcoding.beetlejuice</groupId>
+                <artifactId>eu.artofcoding.beetlejuice.web.security</artifactId>
+                <version>${version.eu.artofcoding.beetlejuice}</version>
+            </dependency>
+            <dependency>
+                <groupId>eu.artofcoding.beetlejuice</groupId>
+                <artifactId>eu.artofcoding.beetlejuice.web.jsf</artifactId>
+                <version>${version.eu.artofcoding.beetlejuice}</version>
+            </dependency>
+            <!--
+                Third Party
+            -->
             <dependency>
                 <groupId>javax.enterprise</groupId>
                 <artifactId>cdi-api</artifactId>
                 <version>1.0-SP4</version>
                 <scope>provided</scope>
             </dependency>
-            <!-- JBoss Weld -->
             <dependency>
                 <groupId>org.jboss.weld</groupId>
                 <artifactId>weld-core</artifactId>
                 <version>1.1.10.Final</version>
             </dependency>
-            <!--
-                Code Quality
-            -->
-            <!-- FindBugs -->
             <dependency>
                 <groupId>net.sourceforge.findbugs</groupId>
                 <artifactId>jsr305</artifactId>
                 <version>1.3.2</version>
             </dependency>
-            <!--
-                Java EE
-            -->
-            <!-- GlassFish -->
             <dependency>
                 <groupId>org.glassfish.main.javaee-api</groupId>
                 <artifactId>javaee-api</artifactId>
@@ -258,7 +339,6 @@
                 <version>3.0.1</version>
                 <scope>provided</scope>
             </dependency>
-            <!-- JBoss Java EE 6 -->
             <dependency>
                 <groupId>org.jboss.spec</groupId>
                 <artifactId>jboss-javaee-6.0</artifactId>
@@ -266,10 +346,6 @@
                 <type>pom</type>
                 <scope>provided</scope>
             </dependency>
-            <!--
-                Web Services
-            -->
-            <!-- JAX-WS -->
             <dependency>
                 <groupId>javax.xml.ws</groupId>
                 <artifactId>jaxws-api</artifactId>
@@ -300,123 +376,65 @@
                 <artifactId>webservices-osgi</artifactId>
                 <version>2.1</version>
             </dependency>
-            <!--
-                Java Persistence API
-            -->
-            <!-- EclipseLink -->
             <dependency>
                 <groupId>org.eclipse.persistence</groupId>
                 <artifactId>org.eclipse.persistence.jpa</artifactId>
                 <version>2.5.1</version>
                 <scope>provided</scope>
             </dependency>
-            <!-- MySQL -->
             <dependency>
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
                 <version>5.1.21</version>
                 <scope>provided</scope>
             </dependency>
-            <!--
-                JavaServer Faces
-            -->
             <dependency>
                 <groupId>javax.faces</groupId>
                 <artifactId>javax.faces-api</artifactId>
                 <version>2.1</version>
                 <scope>provided</scope>
             </dependency>
-            <!-- Apache MyFaces Tomahawk -->
             <dependency>
                 <groupId>org.apache.myfaces.tomahawk</groupId>
                 <artifactId>tomahawk20</artifactId>
                 <version>1.1.14</version>
             </dependency>
-            <!-- OmniFaces -->
             <dependency>
                 <groupId>org.omnifaces</groupId>
                 <artifactId>omnifaces</artifactId>
                 <version>1.3</version>
             </dependency>
-            <!-- PrettyFaces -->
             <dependency>
                 <groupId>com.ocpsoft</groupId>
                 <artifactId>prettyfaces-jsf2</artifactId>
                 <version>3.3.3</version>
             </dependency>
-            <!--
-                Spring
-            -->
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-web</artifactId>
                 <version>3.1.3.RELEASE</version>
             </dependency>
-            <!--
-                Google
-            -->
-            <!-- Guava -->
             <dependency>
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
                 <version>13.0.1</version>
             </dependency>
-            <!--
-                PDF
-            -->
             <dependency>
                 <groupId>org.apache.pdfbox</groupId>
                 <artifactId>pdfbox</artifactId>
                 <version>1.7.1</version>
-            </dependency>
-            <!--
-                Beetlejuice
-            -->
-            <dependency>
-                <groupId>eu.artofcoding.beetlejuice</groupId>
-                <artifactId>beetlejuice-api</artifactId>
-                <version>${version.eu.artofcoding.beetlejuice}</version>
-            </dependency>
-            <dependency>
-                <groupId>eu.artofcoding.beetlejuice</groupId>
-                <artifactId>beetlejuice-persistence</artifactId>
-                <version>${version.eu.artofcoding.beetlejuice}</version>
-            </dependency>
-            <dependency>
-                <groupId>eu.artofcoding.beetlejuice</groupId>
-                <artifactId>beetlejuice-cdm</artifactId>
-                <version>${version.eu.artofcoding.beetlejuice}</version>
-            </dependency>
-            <dependency>
-                <groupId>eu.artofcoding.beetlejuice</groupId>
-                <artifactId>beetlejuice-template</artifactId>
-                <version>${version.eu.artofcoding.beetlejuice}</version>
-            </dependency>
-            <dependency>
-                <groupId>eu.artofcoding.beetlejuice</groupId>
-                <artifactId>beetlejuice-email</artifactId>
-                <version>${version.eu.artofcoding.beetlejuice}</version>
-            </dependency>
-            <dependency>
-                <groupId>eu.artofcoding.beetlejuice</groupId>
-                <artifactId>beetlejuice-web</artifactId>
-                <version>${version.eu.artofcoding.beetlejuice}</version>
-            </dependency>
-            <dependency>
-                <groupId>eu.artofcoding.beetlejuice</groupId>
-                <artifactId>beetlejuice-web-security</artifactId>
-                <version>${version.eu.artofcoding.beetlejuice}</version>
-            </dependency>
-            <dependency>
-                <groupId>eu.artofcoding.beetlejuice</groupId>
-                <artifactId>beetlejuice-web-jsfcomponents</artifactId>
-                <version>${version.eu.artofcoding.beetlejuice}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
     <build>
         <pluginManagement>
             <plugins>
+                <!-- versions-maven-plugin -->
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>versions-maven-plugin</artifactId>
+                    <version>2.1</version>
+                </plugin>
                 <!-- buildnumber-maven-plugin -->
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
@@ -462,6 +480,11 @@
             </plugins>
         </pluginManagement>
         <plugins>
+            <!-- versions-maven-plugin -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>versions-maven-plugin</artifactId>
+            </plugin>
             <!-- buildnumber-maven-plugin -->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -488,13 +511,14 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <testSource>1.7</testSource>
-                    <testTarget>1.7</testTarget>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <testSource>${version.java}</testSource>
+                    <testTarget>${version.java}</testTarget>
+                    <source>${version.java}</source>
+                    <target>${version.java}</target>
                 </configuration>
             </plugin>
         </plugins>
+        <finalName>${project.artifactId}-${project.version}</finalName>
     </build>
     <issueManagement>
         <system>GitHub</system>
@@ -507,18 +531,6 @@
         <url>http://bitbucket.org/artofcoding/retoure-server</url>
     </scm>
     <repositories>
-        <!-- art of coding's Public Maven Repository (local) -->
-        <repository>
-            <id>public.maven.repository</id>
-            <name>Public Local Repository</name>
-            <url>${aoc.public.maven.repository}</url>
-        </repository>
-        <!-- art of coding's Private Maven Repository (local) -->
-        <repository>
-            <id>private.maven.repository</id>
-            <name>Private Local Repository</name>
-            <url>${aoc.private.maven.repository}</url>
-        </repository>
         <!-- Snapshots -->
         <repository>
             <id>jvnet-nexus-snapshots</id>
@@ -533,12 +545,4 @@
             <url>http://download.java.net/maven/2</url>
         </pluginRepository>
     </pluginRepositories>
-    <distributionManagement>
-        <!-- art of coding's Private Maven Repository (local) -->
-        <repository>
-            <id>private.maven.repository</id>
-            <name>Private Local Repository</name>
-            <url>${aoc.private.maven.repository}</url>
-        </repository>
-    </distributionManagement>
 </project>
