--- a/retoure-dhl-client/pom.xml
+++ b/retoure-dhl-client/pom.xml
@@ -6,44 +6,32 @@
     <parent>
         <groupId>eu.artofcoding.retoure</groupId>
         <artifactId>retoure-server</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>LOCALBUILD</version>
     </parent>
     <artifactId>retoure-dhl-client</artifactId>
     <name>Retoure DHL Client</name>
     <url>http://www.retourenportal.com</url>
     <dependencies>
-        <!--
-            CDI
-        -->
+        <!-- Retoure -->
+        <dependency>
+            <groupId>eu.artofcoding.retoure</groupId>
+            <artifactId>retoure-api</artifactId>
+        </dependency>
+        <!-- Third Party -->
+        <dependency>
+            <groupId>org.apache.cxf</groupId>
+            <artifactId>cxf-rt-frontend-jaxws</artifactId>
+            <version>${version.org.apache.cxf}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.cxf</groupId>
+            <artifactId>cxf-rt-transports-http</artifactId>
+            <version>${version.org.apache.cxf}</version>
+        </dependency>
         <dependency>
             <groupId>javax.enterprise</groupId>
             <artifactId>cdi-api</artifactId>
             <scope>provided</scope>
-        </dependency>
-        <!--
-            JAX-WS
-        -->
-        <!--
-        <dependency>
-            <groupId>javax.xml.ws</groupId>
-            <artifactId>jaxws-api</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.sun.xml.ws</groupId>
-            <artifactId>jaxws-rt</artifactId>
-        </dependency>
-        -->
-        <dependency>
-            <groupId>org.glassfish.metro</groupId>
-            <artifactId>webservices-osgi</artifactId>
-        </dependency>
-        <!--
-            Retoure
-        -->
-        <dependency>
-            <groupId>eu.artofcoding.retoure</groupId>
-            <artifactId>retoure-api</artifactId>
-            <version>${project.version}</version>
         </dependency>
     </dependencies>
     <build>
@@ -74,6 +62,5 @@
                 </configuration>
             </plugin>
         </plugins>
-        <finalName>${project.artifactId}-${buildNumber}</finalName>
     </build>
 </project>
