--- a/retoure-web-helper/pom.xml
+++ b/retoure-web-helper/pom.xml
@@ -6,47 +6,36 @@
     <parent>
         <groupId>eu.artofcoding.retoure</groupId>
         <artifactId>retoure-server</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>LOCALBUILD</version>
     </parent>
     <artifactId>retoure-web-helper</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
     <name>Retoure Web Components and Helper</name>
     <url>http://www.retourenportal.com</url>
     <packaging>jar</packaging>
     <dependencies>
-        <!--
-            Java EE
-        -->
+        <!-- Retoure -->
+        <dependency>
+            <groupId>eu.artofcoding.retoure</groupId>
+            <artifactId>retoure-api</artifactId>
+        </dependency>
+        <!-- Java EE -->
         <dependency>
             <groupId>org.jboss.spec</groupId>
             <artifactId>jboss-javaee-6.0</artifactId>
             <type>pom</type>
             <scope>provided</scope>
         </dependency>
-        <!--
-            CDI
-        -->
+        <!-- CDI -->
         <dependency>
             <groupId>javax.enterprise</groupId>
             <artifactId>cdi-api</artifactId>
             <scope>provided</scope>
         </dependency>
-        <!--
-            JavaServer Faces
-        -->
+        <!-- JavaServer Faces -->
         <dependency>
             <groupId>javax.faces</groupId>
             <artifactId>javax.faces-api</artifactId>
             <scope>provided</scope>
-        </dependency>
-        <!--
-            Retoure
-        -->
-        <dependency>
-            <groupId>eu.artofcoding.retoure</groupId>
-            <artifactId>retoure-api</artifactId>
-            <version>${project.version}</version>
-            <scope>compile</scope>
         </dependency>
     </dependencies>
     <build>
@@ -63,6 +52,5 @@
                 <directory>src/main/webapp/resources</directory>
             </resource>
         </resources>
-        <finalName>${project.artifactId}-${buildNumber}</finalName>
     </build>
 </project>
