--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>retoure-web-aktivshop</module>
         <module>retoure-store-aktivshop</module>
         <module>retoure-enterprise</module>
+        <module>retoure-delivery-tomee</module>
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
