--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <version.java>1.8</version.java>
+        <version.java>1.7</version.java>
         <version.eu.artofcoding.beetlejuice>1.3.0.49</version.eu.artofcoding.beetlejuice>
         <version.org.apache.cxf>2.7.10</version.org.apache.cxf>
     </properties>
@@ -532,7 +532,16 @@
         <url>http://bitbucket.org/artofcoding/retoure-server</url>
     </scm>
     <repositories>
-        <!-- Snapshots -->
+        <repository>
+            <id>jboss</id>
+            <url>https://repository.jboss.org/nexus/content/groups/public/</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
         <repository>
             <id>jvnet-nexus-snapshots</id>
             <name>jvnet-nexus-snapshots</name>
