--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,10 @@
     <groupId>eu.artofcoding.retoure</groupId>
     <artifactId>retoure-server</artifactId>
     <version>LOCALBUILD</version>
-    <name>Retoure Server</name>
-    <url>http://www.retourenportal.com</url>
     <packaging>pom</packaging>
     <modules>
         <module>retoure-api</module>
-        <module>retoure-persistence</module>
+        <!--<module>retoure-persistence</module>-->
         <module>retoure-dhl-client</module>
         <module>retoure-static-web</module>
         <module>retoure-web-helper</module>
@@ -19,11 +17,12 @@
         <module>retoure-store-demo</module>
         <module>retoure-web-aktivshop</module>
         <module>retoure-store-aktivshop</module>
-        <module>retoure-enterprise</module>
+        <!--<module>retoure-enterprise</module>-->
         <module>retoure-delivery-tomee</module>
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <version.java>1.7</version.java>
         <version.eu.artofcoding.beetlejuice>1.3.0.49</version.eu.artofcoding.beetlejuice>
         <version.org.apache.cxf>2.7.10</version.org.apache.cxf>
@@ -436,12 +435,6 @@
                     <artifactId>versions-maven-plugin</artifactId>
                     <version>2.1</version>
                 </plugin>
-                <!-- buildnumber-maven-plugin -->
-                <plugin>
-                    <groupId>org.codehaus.mojo</groupId>
-                    <artifactId>buildnumber-maven-plugin</artifactId>
-                    <version>1.2</version>
-                </plugin>
                 <!-- maven-compiler-plugin -->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -486,27 +479,6 @@
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>versions-maven-plugin</artifactId>
             </plugin>
-            <!-- buildnumber-maven-plugin -->
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>buildnumber-maven-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <phase>validate</phase>
-                        <goals>
-                            <goal>create</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <doCheck>true</doCheck>
-                    <doUpdate>false</doUpdate>
-                    <format>${project.version}.{0,number}</format>
-                    <items>
-                        <item>buildNumber</item>
-                    </items>
-                </configuration>
-            </plugin>
             <!-- maven-compiler-plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -531,28 +503,4 @@
         </developerConnection>
         <url>http://bitbucket.org/artofcoding/retoure-server</url>
     </scm>
-    <repositories>
-        <repository>
-            <id>jboss</id>
-            <url>https://repository.jboss.org/nexus/content/groups/public/</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-        <repository>
-            <id>jvnet-nexus-snapshots</id>
-            <name>jvnet-nexus-snapshots</name>
-            <url>https://maven.java.net/content/repositories/snapshots/</url>
-        </repository>
-    </repositories>
-    <pluginRepositories>
-        <pluginRepository>
-            <id>maven.java.net</id>
-            <name>Java.net Maven2 Repository</name>
-            <url>http://download.java.net/maven/2</url>
-        </pluginRepository>
-    </pluginRepositories>
 </project>
